Adiciona interação com a api na tela de criar nova consulta

--- a/frontend/src/app/nova-consulta/nova-consulta.component.css
+++ b/frontend/src/app/nova-consulta/nova-consulta.component.css
@@ -32,8 +32,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* border: 1px solid #ccc; */
     
+}
+
+.error {
+    margin-left: 150px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+
+    color: red;
+
 }
 
 .inputs {
