--- a/frontend/src/app/lista-consultas/lista-consultas.component.css
+++ b/frontend/src/app/lista-consultas/lista-consultas.component.css
@@ -101,7 +101,7 @@ td {
 
 .botao-desmarcar {
     border: none;
-    background: #FFFFFF;
+    background: inherit;
     cursor: pointer;
 
     width: 100px;
