Cria README pra aplicação

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -10,7 +10,7 @@
             class="entrada" 
             type="text" 
             id="username" 
-            placeholder="Email ou Login" 
+            placeholder="Login" 
             [formControl]="form.controls['username']"
         >
         <input 
